# k2-midi

./: flake.nix
crates/AKASHA/: Cargo.toml
crates/AKASHA/src/: main.rs
crates/ANAHATA/: Cargo.toml
crates/ANAHATA/src/: globals.rs  main.rs
crates/SARASVATI/: Cargo.toml
crates/SARASVATI/src/: main.rs  xonek2.rs
crates/midi-nats/: Cargo.toml
crates/midi-nats/src/: main.rs
crates/my-cli/: Cargo.toml
crates/my-cli/src/: main.rs  xonek2.rs
crates/my-server/: Cargo.toml
crates/my-server/src/: main.rs
crates/player/: Cargo.toml
crates/player/src/: main.rs
crates/socklog/: Cargo.toml
crates/socklog/src/: main.rs
