[package]
name = "AKASHA"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
egui = "0.29"
eframe = { version = "0.29" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
crossbeam = "0.8.4"
nats = "0.25.0"
metaflac = "0.2.7"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
